--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.13"
   }
 }
